[gd_scene load_steps=10 format=2]

[ext_resource path="res://Escenas/Enemigos/Enemigo.gd" type="Script" id=1]
[ext_resource path="res://Escenas/Enemigos/Enemigos.gd" type="Script" id=2]
[ext_resource path="res://Recursos/Sprite/Enemigos/Tanque.png" type="Texture" id=3]
[ext_resource path="res://Recursos/Sprite/Enemigos/Cañon.png" type="Texture" id=4]
[ext_resource path="res://Recursos/Sprite/Enemigos/Spr_Cañon_Enemy.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9.1905, 7.92735 )

[sub_resource type="CircleShape2D" id=2]
radius = 582.838

[sub_resource type="CircleShape2D" id=3]
radius = 139.045

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 12.3206, 8.59434 )

[node name="Enemigo" type="Node2D"]
script = ExtResource( 1 )

[node name="BodyTankEnemy" type="KinematicBody2D" parent="." groups=[
"enemigos",
]]
collision_layer = 6
collision_mask = 6
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="BodyTankEnemy"]
position = Vector2( 0, -21.7959 )
texture = ExtResource( 3 )

[node name="Spr_Cañon_Enemy" type="Sprite" parent="BodyTankEnemy"]
position = Vector2( 0.0604782, -0.183012 )
texture = ExtResource( 4 )
offset = Vector2( -0.0604782, -14.5123 )
script = ExtResource( 5 )

[node name="Colision" type="CollisionShape2D" parent="BodyTankEnemy"]
position = Vector2( -0.0652012, 2.20682 )
shape = SubResource( 1 )
one_way_collision_margin = 0.0

[node name="TextEdit" type="TextEdit" parent="BodyTankEnemy"]
modulate = Color( 1, 1, 1, 0.32 )
margin_left = -56.0
margin_top = -60.0
margin_right = 174.0
margin_bottom = -28.0
mouse_default_cursor_shape = 0
size_flags_stretch_ratio = 4.3
text = "a"

[node name="Tiempo_Disparo" type="Timer" parent="BodyTankEnemy"]
autostart = true

[node name="Seguir" type="Area2D" parent="BodyTankEnemy"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BodyTankEnemy/Seguir"]
position = Vector2( -77.5161, -23.0453 )
shape = SubResource( 2 )

[node name="Disparar" type="Area2D" parent="BodyTankEnemy"]
position = Vector2( 1, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BodyTankEnemy/Disparar"]
shape = SubResource( 3 )

[node name="ColisionCuerpo" type="Area2D" parent="BodyTankEnemy"]
collision_layer = 12
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="BodyTankEnemy/ColisionCuerpo"]
position = Vector2( 0, 1.74826 )
shape = SubResource( 4 )
[connection signal="timeout" from="BodyTankEnemy/Tiempo_Disparo" to="BodyTankEnemy" method="Tiempo_Disparo"]
[connection signal="body_entered" from="BodyTankEnemy/Seguir" to="BodyTankEnemy" method="SeguirAPlayer"]
[connection signal="body_exited" from="BodyTankEnemy/Seguir" to="BodyTankEnemy" method="SaleDelAreaSeguirAPlayer"]
[connection signal="body_entered" from="BodyTankEnemy/Disparar" to="BodyTankEnemy" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="BodyTankEnemy/Disparar" to="BodyTankEnemy" method="SaleDelArea" flags=3]
[connection signal="body_entered" from="BodyTankEnemy/ColisionCuerpo" to="BodyTankEnemy" method="OnColisionCuerpo"]
